# audioMatrixSwitch

./: .gitignore  CMakeLists.txt  README.md  partitions.csv
components/audiomatrix/: CMakeLists.txt  Kconfig.projbuild
components/audiomatrix/include/: audiomatrix.h  audiomatrix_event_types.h  audiomatrix_types.h
components/audiomatrix/src/: audiomatrix.c
components/events/: CMakeLists.txt  Kconfig.projbuild
components/events/include/: events.h  events_types.h
components/events/src/: events.c
components/home_json/: CMakeLists.txt
components/home_json/include/: home_json.h
components/home_json/src/: home_json.c
components/home_mqtt_client/: CMakeLists.txt  Kconfig.projbuild
components/home_ota/: CMakeLists.txt  Kconfig.projbuild
components/home_ota/include/: home_ota.h  home_ota_types.h
components/home_ota/src/: home_ota.c
components/home_web_server/: CMakeLists.txt  Kconfig.projbuild
components/home_web_server/include/: home_web_server.h  home_web_server_event_types.h  home_web_server_types.h
components/home_web_server/src/: home_web_server.c
components/home_wifi/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
components/home_wifi/include/: home_wifi.h  (+2 more)
components/matrix_lcd/: CMakeLists.txt  Kconfig.projbuild
components/matrix_relay/: CMakeLists.txt  Kconfig.projbuild
components/matrix_spi/: CMakeLists.txt  Kconfig.projbuild
components/nvs_preferences/: CMakeLists.txt
components/onboardled/: CMakeLists.txt  Kconfig.projbuild
components/time_sync/: CMakeLists.txt  Kconfig.projbuild
main/: Kconfig.projbuild  main.c
(+23 files in other folders)
